fix highlight, align the line number

--- a/source/css/_partial/highlight.less
+++ b/source/css/_partial/highlight.less
@@ -43,6 +43,7 @@
 
         pre {
             margin: 0;
+            padding: 0;
         }
 
         table {
@@ -52,6 +53,7 @@
 
         td {
             border: none;
+            vertical-align: top;
         }
 
         tr,
